Bug 119390 - Toolbar control gets the focus when closing the floating color widget
Summary: Toolbar control gets the focus when closing the floating color widget
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-20 14:17 UTC by Telesto
Modified: 2018-08-30 22:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-08-20 14:17:07 UTC
Description:
MacOS: The default style combobox will be activated when closing the floating highlight color or text color window. The cursor position inside the document is gone

Steps to Reproduce:
1. Expand the text color settings and drag the toolbox somewhere
2. Close it -> gray cross -> Default Style box will be activated

Actual Results:
Default Style box will be activated

Expected Results:
Focus inside the document -> Same as under Windows


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.0.0.alpha0+
Build ID: c958f52b813d34baa9b5236bb34a08a04e6b0aba
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-08-10_05:06:44
Locale: nl-NL (nl_NL.UTF-8); Calc: threaded
Comment 1 Maxim Monastirsky 2018-08-20 23:32:14 UTC
(In reply to Telesto from comment #0)
> Expected Results:
> Focus inside the document -> Same as under Windows
That's odd, as I can reproduce this also under Windows and Linux. Anyway, I have a patch that fixes this for Linux, but not sure it will fully solve the problem elsewhere. Need to check.
Comment 2 Commit Notification 2018-08-30 22:10:00 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b8ef8bd6acfa9c062146bff2168fb0450e9542e

tdf#119390 Don't focus the toolbar when closing a floating window

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.