tdf#119390 Don't focus the toolbar when closing a floating window

Toolbar popup windows have the toolbar as their direct
parent. This causes problems when such window is teared-off
and later closed, as Window::dispose will attempt to move the
focus to its parent which is the toolbar, instead of what
users expect to have the focus back in the document area, or
in whatever was the last focused control. As a solution
reparent the window before dispose, similar to what happens
with floating toolbars.

Also return the focus to the main window when popup mode ends,
so we can keep track of the last focused control. This is also
a good thing by itself, as WB_OWNERDRAWDECORATION windows don't
get the focus by default, which results in neither the floating
window nor the document have focus after tear-off.

Change-Id: I060b8c45a64db9c612da58b7c35478bab41a4558
Reviewed-on: https://gerrit.libreoffice.org/59811
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>