svtools/source/uno/popupwindowcontroller.cxx
@@ -79,7 +79,9 @@ void PopupWindowControllerImpl::SetFloatingWindow()
     if( mpFloatingWindow )
     {
         mpFloatingWindow->RemoveEventListener( LINK( this, PopupWindowControllerImpl, WindowEventListener ) );
-        mpFloatingWindow.disposeAndClear();
+        // tdf#119390 reparent the window, so focus is restored
+        // to the last focused control of the application window.
+        mpFloatingWindow->doLazyDelete();
     }
     mpFloatingWindow = mpPopupWindow;
     mpPopupWindow.clear();
